# invenio-search-ui

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MAINTAINERS  MANIFEST.in  README.rst  RELEASE-NOTES.rst  babel-js.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  conf.py  configuration.rst  customizing.rst  index.rst  make.bat  usage.rst
examples/: app-fixtures.sh  app-recreate.sh  app-setup.sh  app-teardown.sh  app.py  requirements.txt
examples/data/v6/testrecords/: testrecord-v1.0.0.json
invenio_search_ui/: __init__.py  bundles.py  config.py  ext.py  searchconfig.py  version.py  views.py  webpack.py
invenio_search_ui/assets/bootstrap3/js/invenio_search_ui/: app.js
invenio_search_ui/assets/bootstrap3/scss/invenio_search_ui/: search.scss
invenio_search_ui/assets/bootstrap3/templates/invenio_search_ui/: pagination.html  range.html  searchbar.html  togglebutton.html
invenio_search_ui/assets/js/invenio_react_search_ui/: App.js  Results.js
invenio_search_ui/assets/js/invenio_search_ui/: app.js
invenio_search_ui/assets/scss/invenio_search_ui/: search.scss
invenio_search_ui/assets/semantic-ui/js/invenio_react_search_ui/: App.js  InvenioSearchUISearchBar.js  index.js
invenio_search_ui/assets/semantic-ui/js/invenio_search_ui/: App.js  InvenioSearchUISearchBar.js  Results.js  SearchApp.js  SearchAppCustomizations.js  SearchAppOverride.js  SearchBar.js  app.js  defaultComponents.js  index.js  util.js
invenio_search_ui/assets/semantic-ui/translations/invenio_search_ui/: i18next-scanner.config.js  i18next.js  (+3 more)
invenio_search_ui/static/js/invenio_search_ui/: app.js
invenio_search_ui/static/scss/invenio_search_ui/: search.scss
invenio_search_ui/static/templates/invenio_search_ui/: count.html  error.html  facets.html  loading.html  pagination.html  range.html  results.html  searchbar.html  selectbox.html  togglebutton.html
invenio_search_ui/templates/invenio_search_ui/: base.html  base_header.html  header.html  index.html  react_search.html  search.html
invenio_search_ui/templates/semantic-ui/invenio_search_ui/: header.html  search.html
invenio_search_ui/translations/: messages-js.pot  messages.pot
invenio_search_ui/translations/af/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/ar/LC_MESSAGES/: messages.po
invenio_search_ui/translations/bg/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/ca/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/cs/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/da/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/de/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/de_AT/LC_MESSAGES/: messages.po
invenio_search_ui/translations/de_DE/LC_MESSAGES/: messages.po
invenio_search_ui/translations/el/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/en_AT/LC_MESSAGES/: messages.po
invenio_search_ui/translations/en_HU/LC_MESSAGES/: messages.po
invenio_search_ui/translations/es/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/es_CU/LC_MESSAGES/: messages.po
invenio_search_ui/translations/es_MX/LC_MESSAGES/: messages.po
invenio_search_ui/translations/et/LC_MESSAGES/: messages.po
invenio_search_ui/translations/et_EE/LC_MESSAGES/: messages.po
invenio_search_ui/translations/fa/LC_MESSAGES/: messages.po
invenio_search_ui/translations/fa_IR/LC_MESSAGES/: messages.po
invenio_search_ui/translations/fi/LC_MESSAGES/: messages.po
invenio_search_ui/translations/fr/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/fr_CI/LC_MESSAGES/: messages.po
invenio_search_ui/translations/fr_FR/LC_MESSAGES/: messages.po
invenio_search_ui/translations/gl/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/hi_IN/LC_MESSAGES/: messages.po
invenio_search_ui/translations/hr/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/hu/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/hu_HU/LC_MESSAGES/: messages.po
invenio_search_ui/translations/it/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/ja/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/ka/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/ko/LC_MESSAGES/: messages.po
invenio_search_ui/translations/lt/LC_MESSAGES/: messages.po
invenio_search_ui/translations/ne/LC_MESSAGES/: messages.po
invenio_search_ui/translations/no/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/pl/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/pt/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/ro/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/ru/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/rw/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/sk/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/sv/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/sv_SE/LC_MESSAGES/: messages.po
invenio_search_ui/translations/tr/LC_MESSAGES/: messages.po
invenio_search_ui/translations/uk/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/uk_UA/LC_MESSAGES/: messages.po
invenio_search_ui/translations/zh-Hant/LC_MESSAGES/: messages.po
invenio_search_ui/translations/zh_CN/LC_MESSAGES/: messages-js.po  messages.po
invenio_search_ui/translations/zh_TW/LC_MESSAGES/: messages-js.po  messages.po
tests/: conftest.py  test_app.py  test_examples_app.py  test_invenio_search_ui.py  test_ng_templates.py  test_rsk_templates.py
tests/templates/invenio_search_ui/: base.html  base_header.html
(+103 files in other folders)
