# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2022 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-search-ui
version = attr: invenio_search_ui.__version__
description = UI for Invenio-Search.
long_description = file: README.rst, CHANGES.rst
keywords = invenio search ui
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-search-ui
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    Babel>=2.8
    invenio-assets>=1.2.7
    invenio-base>=1.2.11
    invenio-i18n>=1.3.2

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    invenio-db>=1.0.8
    invenio-records>=1.0.0
    pytest-invenio>=1.4.11
    Sphinx>=4.2.0,<5.0.0

[options.entry_points]
invenio_base.apps =
    invenio_search_ui = invenio_search_ui:InvenioSearchUI
invenio_base.blueprints =
    invenio_search_ui = invenio_search_ui.views:blueprint
invenio_search_ui.translations =
    messages = invenio_search_ui
invenio_assets.webpack =
    invenio_search_ui = invenio_search_ui.webpack:search_ui

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_search_ui/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_search_ui/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_search_ui/translations/messages.pot
output-dir = invenio_search_ui/translations/

[update_catalog]
input-file = invenio_search_ui/translations/messages.pot
output-dir = invenio_search_ui/translations/

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_search_ui --cov-report=term-missing
testpaths = tests invenio_search_ui
filterwarnings = ignore::pytest.PytestDeprecationWarning
